Proyecto 1/AnalizadorLexico/AnalizadorLexicoParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from AnalizadorLexico.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Proyecto_1.AnalizadorLexico {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class AnalizadorLexicoParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, LINEA=44, MULTILINEA=45, 
		NEWLINE=46, INT=47, DECIMAL=48, CADENA=49, CARACTER=50, BOOL=51, NIL=52, 
		ID=53, IGUAL=54, DPIGUAL=55, PARIZQ=56, PARDER=57, LLAVEIZQ=58, LLAVEDER=59, 
		CORIZQ=60, CORDER=61, COMA=62, INCRE=63, DECRE=64;
	public const int
		RULE_inicio = 0, RULE_listaInstr = 1, RULE_instruccion = 2, RULE_print = 3, 
		RULE_declaracionVariable = 4, RULE_declaracionSlice = 5, RULE_declaracionMatriz = 6, 
		RULE_listaFilas = 7, RULE_fila = 8, RULE_asignacion = 9, RULE_tipo = 10, 
		RULE_instruccion_if = 11, RULE_instruccion_ifelse = 12, RULE_instruccion_else = 13, 
		RULE_instruccion_switch = 14, RULE_lista_case = 15, RULE_instruccion_case = 16, 
		RULE_instruccion_default = 17, RULE_instruccion_for = 18, RULE_instruccion_funcion = 19, 
		RULE_llamada_funcion = 20, RULE_lista_parametros = 21, RULE_breakInstr = 22, 
		RULE_continueInstr = 23, RULE_returnInstr = 24, RULE_expr = 25;
	public static readonly string[] ruleNames = {
		"inicio", "listaInstr", "instruccion", "print", "declaracionVariable", 
		"declaracionSlice", "declaracionMatriz", "listaFilas", "fila", "asignacion", 
		"tipo", "instruccion_if", "instruccion_ifelse", "instruccion_else", "instruccion_switch", 
		"lista_case", "instruccion_case", "instruccion_default", "instruccion_for", 
		"instruccion_funcion", "llamada_funcion", "lista_parametros", "breakInstr", 
		"continueInstr", "returnInstr", "expr"
	};

	private static readonly string[] _LiteralNames = {
		null, "'fmt.Println'", "'var'", "'+='", "'-='", "'append'", "'int'", "'float64'", 
		"'string'", "'bool'", "'rune'", "'if'", "'else'", "'switch'", "'case'", 
		"':'", "'default'", "'for'", "';'", "'range'", "'func'", "'break'", "'continue'", 
		"'return'", "'!'", "'-'", "'*'", "'/'", "'%'", "'+'", "'>='", "'>'", "'<='", 
		"'<'", "'=='", "'!='", "'&&'", "'||'", "'slices.Index'", "'strings.Join'", 
		"'len'", "'strconv.Atoi'", "'strconv.ParseFloat'", "'reflect.TypeOf'", 
		null, null, null, null, null, null, null, null, "'nil'", null, "'='", 
		"':='", "'('", "')'", "'{'", "'}'", "'['", "']'", "','", "'++'", "'--'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, "LINEA", "MULTILINEA", 
		"NEWLINE", "INT", "DECIMAL", "CADENA", "CARACTER", "BOOL", "NIL", "ID", 
		"IGUAL", "DPIGUAL", "PARIZQ", "PARDER", "LLAVEIZQ", "LLAVEDER", "CORIZQ", 
		"CORDER", "COMA", "INCRE", "DECRE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "AnalizadorLexico.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static AnalizadorLexicoParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public AnalizadorLexicoParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public AnalizadorLexicoParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class InicioContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ListaInstrContext listaInstr() {
			return GetRuleContext<ListaInstrContext>(0);
		}
		public InicioContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_inicio; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IAnalizadorLexicoListener typedListener = listener as IAnalizadorLexicoListener;
			if (typedListener != null) typedListener.EnterInicio(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IAnalizadorLexicoListener typedListener = listener as IAnalizadorLexicoListener;
			if (typedListener != null) typedListener.ExitInicio(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAnalizadorLexicoVisitor<TResult> typedVisitor = visitor as IAnalizadorLexicoVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInicio(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InicioContext inicio() {
		InicioContext _localctx = new InicioContext(Context, State);
		EnterRule(_localctx, 0, RULE_inicio);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 52;
			listaInstr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ListaInstrContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public InstruccionContext[] instruccion() {
			return GetRuleContexts<InstruccionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public InstruccionContext instruccion(int i) {
			return GetRuleContext<InstruccionContext>(i);
		}
		public ListaInstrContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_listaInstr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IAnalizadorLexicoListener typedListener = listener as IAnalizadorLexicoListener;
			if (typedListener != null) typedListener.EnterListaInstr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IAnalizadorLexicoListener typedListener = listener as IAnalizadorLexicoListener;
			if (typedListener != null) typedListener.ExitListaInstr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAnalizadorLexicoVisitor<TResult> typedVisitor = visitor as IAnalizadorLexicoVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitListaInstr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ListaInstrContext listaInstr() {
		ListaInstrContext _localctx = new ListaInstrContext(Context, State);
		EnterRule(_localctx, 2, RULE_listaInstr);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 54;
			instruccion();
			State = 58;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 9007199270610950L) != 0)) {
				{
				{
				State = 55;
				instruccion();
				}
				}
				State = 60;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InstruccionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PrintContext print() {
			return GetRuleContext<PrintContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclaracionVariableContext declaracionVariable() {
			return GetRuleContext<DeclaracionVariableContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclaracionSliceContext declaracionSlice() {
			return GetRuleContext<DeclaracionSliceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclaracionMatrizContext declaracionMatriz() {
			return GetRuleContext<DeclaracionMatrizContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AsignacionContext asignacion() {
			return GetRuleContext<AsignacionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Instruccion_ifContext instruccion_if() {
			return GetRuleContext<Instruccion_ifContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Instruccion_switchContext instruccion_switch() {
			return GetRuleContext<Instruccion_switchContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Instruccion_forContext instruccion_for() {
			return GetRuleContext<Instruccion_forContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Instruccion_funcionContext instruccion_funcion() {
			return GetRuleContext<Instruccion_funcionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Llamada_funcionContext llamada_funcion() {
			return GetRuleContext<Llamada_funcionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BreakInstrContext breakInstr() {
			return GetRuleContext<BreakInstrContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ContinueInstrContext continueInstr() {
			return GetRuleContext<ContinueInstrContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ReturnInstrContext returnInstr() {
			return GetRuleContext<ReturnInstrContext>(0);
		}
		public InstruccionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_instruccion; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IAnalizadorLexicoListener typedListener = listener as IAnalizadorLexicoListener;
			if (typedListener != null) typedListener.EnterInstruccion(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IAnalizadorLexicoListener typedListener = listener as IAnalizadorLexicoListener;
			if (typedListener != null) typedListener.ExitInstruccion(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAnalizadorLexicoVisitor<TResult> typedVisitor = visitor as IAnalizadorLexicoVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInstruccion(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InstruccionContext instruccion() {
		InstruccionContext _localctx = new InstruccionContext(Context, State);
		EnterRule(_localctx, 4, RULE_instruccion);
		try {
			State = 74;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 61;
				print();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 62;
				declaracionVariable();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 63;
				declaracionSlice();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 64;
				declaracionMatriz();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 65;
				asignacion();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 66;
				instruccion_if();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 67;
				instruccion_switch();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 68;
				instruccion_for();
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 69;
				instruccion_funcion();
				}
				break;
			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 70;
				llamada_funcion();
				}
				break;
			case 11:
				EnterOuterAlt(_localctx, 11);
				{
				State = 71;
				breakInstr();
				}
				break;
			case 12:
				EnterOuterAlt(_localctx, 12);
				{
				State = 72;
				continueInstr();
				}
				break;
			case 13:
				EnterOuterAlt(_localctx, 13);
				{
				State = 73;
				returnInstr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PrintContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PARIZQ() { return GetToken(AnalizadorLexicoParser.PARIZQ, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PARDER() { return GetToken(AnalizadorLexicoParser.PARDER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMA() { return GetTokens(AnalizadorLexicoParser.COMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMA(int i) {
			return GetToken(AnalizadorLexicoParser.COMA, i);
		}
		public PrintContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_print; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IAnalizadorLexicoListener typedListener = listener as IAnalizadorLexicoListener;
			if (typedListener != null) typedListener.EnterPrint(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IAnalizadorLexicoListener typedListener = listener as IAnalizadorLexicoListener;
			if (typedListener != null) typedListener.ExitPrint(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAnalizadorLexicoVisitor<TResult> typedVisitor = visitor as IAnalizadorLexicoVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrint(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PrintContext print() {
		PrintContext _localctx = new PrintContext(Context, State);
		EnterRule(_localctx, 6, RULE_print);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 76;
			Match(T__0);
			State = 77;
			Match(PARIZQ);
			State = 78;
			expr(0);
			State = 83;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMA) {
				{
				{
				State = 79;
				Match(COMA);
				State = 80;
				expr(0);
				}
				}
				State = 85;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 86;
			Match(PARDER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclaracionVariableContext : ParserRuleContext {
		public DeclaracionVariableContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declaracionVariable; } }
	 
		public DeclaracionVariableContext() { }
		public virtual void CopyFrom(DeclaracionVariableContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class DeclaracionVarContext : DeclaracionVariableContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(AnalizadorLexicoParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TipoContext tipo() {
			return GetRuleContext<TipoContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IGUAL() { return GetToken(AnalizadorLexicoParser.IGUAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public DeclaracionVarContext(DeclaracionVariableContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IAnalizadorLexicoListener typedListener = listener as IAnalizadorLexicoListener;
			if (typedListener != null) typedListener.EnterDeclaracionVar(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IAnalizadorLexicoListener typedListener = listener as IAnalizadorLexicoListener;
			if (typedListener != null) typedListener.ExitDeclaracionVar(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAnalizadorLexicoVisitor<TResult> typedVisitor = visitor as IAnalizadorLexicoVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclaracionVar(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclaracionVariableContext declaracionVariable() {
		DeclaracionVariableContext _localctx = new DeclaracionVariableContext(Context, State);
		EnterRule(_localctx, 8, RULE_declaracionVariable);
		int _la;
		try {
			_localctx = new DeclaracionVarContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 88;
			Match(T__1);
			State = 89;
			Match(ID);
			State = 90;
			tipo();
			State = 93;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==IGUAL) {
				{
				State = 91;
				Match(IGUAL);
				State = 92;
				expr(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclaracionSliceContext : ParserRuleContext {
		public DeclaracionSliceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declaracionSlice; } }
	 
		public DeclaracionSliceContext() { }
		public virtual void CopyFrom(DeclaracionSliceContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class DeclaracionSliceVacioContext : DeclaracionSliceContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(AnalizadorLexicoParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CORIZQ() { return GetToken(AnalizadorLexicoParser.CORIZQ, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CORDER() { return GetToken(AnalizadorLexicoParser.CORDER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TipoContext tipo() {
			return GetRuleContext<TipoContext>(0);
		}
		public DeclaracionSliceVacioContext(DeclaracionSliceContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IAnalizadorLexicoListener typedListener = listener as IAnalizadorLexicoListener;
			if (typedListener != null) typedListener.EnterDeclaracionSliceVacio(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IAnalizadorLexicoListener typedListener = listener as IAnalizadorLexicoListener;
			if (typedListener != null) typedListener.ExitDeclaracionSliceVacio(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAnalizadorLexicoVisitor<TResult> typedVisitor = visitor as IAnalizadorLexicoVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclaracionSliceVacio(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class DeclaracionSliceLlenoContext : DeclaracionSliceContext {
		public IToken signo;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(AnalizadorLexicoParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CORIZQ() { return GetToken(AnalizadorLexicoParser.CORIZQ, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CORDER() { return GetToken(AnalizadorLexicoParser.CORDER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TipoContext tipo() {
			return GetRuleContext<TipoContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LLAVEIZQ() { return GetToken(AnalizadorLexicoParser.LLAVEIZQ, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LLAVEDER() { return GetToken(AnalizadorLexicoParser.LLAVEDER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IGUAL() { return GetToken(AnalizadorLexicoParser.IGUAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DPIGUAL() { return GetToken(AnalizadorLexicoParser.DPIGUAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMA() { return GetTokens(AnalizadorLexicoParser.COMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMA(int i) {
			return GetToken(AnalizadorLexicoParser.COMA, i);
		}
		public DeclaracionSliceLlenoContext(DeclaracionSliceContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IAnalizadorLexicoListener typedListener = listener as IAnalizadorLexicoListener;
			if (typedListener != null) typedListener.EnterDeclaracionSliceLleno(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IAnalizadorLexicoListener typedListener = listener as IAnalizadorLexicoListener;
			if (typedListener != null) typedListener.ExitDeclaracionSliceLleno(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAnalizadorLexicoVisitor<TResult> typedVisitor = visitor as IAnalizadorLexicoVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclaracionSliceLleno(this);
			else return visitor.VisitChildren(this);
		}
	}
